@@ -32,7 +32,10 @@ java -cp "google-api-java-client/libs/*:calendar/*:bin" Jgcal
 Similarly for the CalendarSample class. If you update resources/client_secrets.json
 don't forget to copy it into bin/cmdline
 
+Build:
+javac -d bin -Djava.ext.dirs=google-api-java-client/libs/:calendar src/cmdline/*.java
 cp resources/client_secrets.json bin/cmdline/client_secrets.json
 
-
+Run:
+java -cp "google-api-java-client/libs/*:calendar/*:apache-tomcat-8.0.20/lib/*:bin" Jgcal
 
